added basic gulp file for js compilation

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
+<!-- <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/jquery-bridget/jquery.bridget.js"></script>
@@ -79,9 +79,11 @@
 
 <script src="app.js"></script>
 <script src="view-home/home.js"></script>
+<script src="view-about/about.js"></script>
 <script src="view-category/category.js"></script>
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
-<script src="components/version/interpolate-filter.js"></script>
+<script src="components/version/interpolate-filter.js"></script> -->
+<script src="../dist/main.min.js"></script>
 </body>
 </html>
